add numbersgit add .! ;)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Numbers</title>
   </head>
   <body>
+    <input type="text" id="addFirst" /> + <input type="text" id="addSecond" /> =
+    <input type="text" id="addAnswer" />
+    <button class="submit" id="addSubmit" onclick="showAdditionAnswer()">
+      Submit
+    </button>
     <script src="index.js"></script>
   </body>
 </html>
