pushing brit brit changes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script src="index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Numbers</title>
+</head>
+
+<body>
+  <div>
+    <input type="text" id="firstBox">+
+    <input type="text" id="secondBox">=
+    <input type="text" id="total">
+    <input type="button" onClick="multiplyBy()" Value="Multiply" />
+  </div>
+  <script src="index.js"></script>
+</body>
+
 </html>
