--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Numbers</title>
   </head>
   <body>
+    <input id=box1 type="text">/
+    <input id=box2 type="text">=
+    <input id=box3 type="text">
+    <button onClick="divideBy()">Submit</button>
     <script src="index.js"></script>
+
   </body>
 </html>
