--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Numbers</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Numbers</title>
+</head>
+<body>
+  <!-- addition  -->
+  <div>
+    <input type="text" id="addFirst" /> + <input type="text" id="addSecond" /> =
+    <input type="text" id="addAnswer" />
+    <button class="submit" id="addSubmit" onclick="showAdditionAnswer()">
+      Submit
+    </button>
+  </div>
+  <!-- multiply -->
+  <div>
+    <input type="text" id="firstBox">+
+    <input type="text" id="secondBox">=
+    <input type="text" id="total">
+    <input type="button" onClick="multiplyBy()" Value="Multiply" />
+  </div>
+  <!-- divide -->
+  <div>
     <input id=box1 type="text">/
     <input id=box2 type="text">=
     <input id=box3 type="text">
     <button onClick="divideBy()">Submit</button>
-    <script src="index.js"></script>
-
-  </body>
+  </div>
+  <script src="index.js"></script>
+</body>
 </html>
+
