--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+<div>
+
+<input type="text" placeholder="number" id="firstNumber"/> -
+
+<input type="text" placeholder="number" id="secondNumber"> =
+
+<input type="text" placeholder="number" id ="answer">
+<button onclick="subAnswer()">submit</button>
+</div>
+
+
+
+
   <body>
     <script src="index.js"></script>
   </body>
